issues with z-indexing the stetched link and the event listeners to remove the css stylings

--- a/testStyles.css
+++ b/testStyles.css
@@ -1,7 +1,6 @@
-.mobile-card-container {
-  display: block;
+.card {
+  background-color: rgb(251, 249, 248);
 }
-
 .card-background {
   background-color: #ffffff;
   border-radius: 6px;
@@ -12,14 +11,21 @@
   box-shadow: 0px 2px 4px 1px rgba(0, 51, 102, 0.1);
 }
 
+.card-footer{
+  border-top: none;
+  color: black;
+  font-weight: 200;
+}
+.a {
+  text-decoration: none;
+}
+
 /* Offsetting and inlarging the main card images */
 .img-background {
   background-color: rgba(255,0,0,.25);
-  /* transform: translate(10px,10px);
-  transform: scale(2, 3);
-  -ms-transform: rotate(10deg); /* IE 9 */
-  /* transform: rotate(10deg);  */
-  transform: matrix(1.1,0,0,1.1,0,0);
+  transform: matrix(1.2,0,0,1.3,0,0);
+  margin-top: 1.3em;
+  z-index: 1;
 }
 .img-background::backdrop{
   background-color: rgba(255,0,0,.25);
@@ -43,13 +49,10 @@
   transform: rotate(10deg);
   /* transform: matrix(1, 2, -1, 1, 80, 80); */
 }
-.img-background {
-  z-index: 1;
-}
 
 /* Creating an overlay for the card body */
 .card-body::after {
-  content:"";
+  content:"This is the Bio";
   visibility: hidden;
   width: 100%;
   height:100%;
@@ -61,9 +64,27 @@
   left: 0;
   opacity: 0.7;
   z-index: 2;
-  /* transform: rotate(10deg); */
 }
 .card-body {
   z-index: 3;
   position: relative;
+  bottom: 3em;
+  background-color: rgb(251, 249, 248);
 }
+
+/* Creating some stylings to toggle for the overlay */
+.inactive {
+  display: none;
+}
+.bg-active {
+  /* visibility: visible; */
+  opacity: 1;
+  background-color: chartreuse;
+  z-index: 5;
+}
+
+.hidden {
+  display: none;
+}
+
+/* Teesting new overlay */
